temp/xor_39388189_stderr.txt
  File "xor_base.py", line 173
    args.exp=6
    ^
IndentationError: unexpected indent
